[package]
name = "boquila"
version = "0.5.1"
authors = ["Ümit Akköse <umieat@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
bytecount = "0.6.2"
clap = "3.0.0-beta.4"
itertools = "0.10.0"
nanoserde = "0.1.20"
rand = {version = "0.8.4", features = ["getrandom", "small_rng"]}
rand_distr = "0.4.1"
seq_io = "0.3.1"

[profile.release]
lto = true