[package]
name = "boquila"
version = "0.6.0"
authors = ["Ümit Akköse <umieat@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.53"
bytecount = "0.6.2"
clap = "3.1.8"
itertools = "0.10.3"
nanoserde = "0.1.29"
rand = {version = "0.8.4", features = ["getrandom", "small_rng"]}
rand_distr = "0.4.3"
seq_io = "0.3.1"

[profile.release]
lto = true